# tei_rdfa

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml
ipynb/: get-rdfa.ipynb  rdf-parser.ipynb  tei_rdfa.ipynb  tei_rdfa_2.ipynb  tei_rdfa_test copy.ipynb  tei_rdfa_test.ipynb
py/: tei_rdfa.py  tei_rdfa_test.py
tei-rdfa/: __init__.py
tei_rdfa/: __init__.py  requirements.txt
tei_rdfa/ipynb/: tei_rdfa.ipynb
